@@ -331,14 +331,16 @@ SPI NAND Flash Support List:
 077. FORESEE FS35ND02G-S3Y2
 078. FORESEE FS35ND04G-S2Y2
 079. DS DS35Q2GA
-080. DS DS35Q1GA
-081. FISON CS11G0T0A0AA
-082. FISON CS11G1T0A0AA
-083. FISON CS11G0G0A0AA
-084. TYM TYM25D2GA01
-085. TYM TYM25D2GA02
-086. TYM TYM25D1GA03
-087. XINCUN XCSP1AAWH-NT
+080. DS DS35M2GA
+081. DS DS35Q1GA
+082. DS DS35M1GA
+083. FISON CS11G0T0A0AA
+084. FISON CS11G1T0A0AA
+085. FISON CS11G0G0A0AA
+086. TYM TYM25D2GA01
+087. TYM TYM25D2GA02
+088. TYM TYM25D1GA03
+089. XINCUN XCSP1AAWH-NT
 
 SPI NOR Flash Support List:
 001. AT26DF161
